# django-shopify

./: .pre-commit-config.yaml  .yamllint.yml  README.md  pyproject.toml  setup.cfg
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
scripts/: start.sh
shopify_app/orders/: exceptions.py  forms.py  services.py  urls.py  views.py
shopify_app/orders/tests/: test_services.py  test_urls.py  test_views.py
shopify_app/templates/: base.html
shopify_app/templates/orders/: order_create_form.html  order_list.html
