[tool.poetry]
name = "shopify_app"
version = "0.1.0"
description = "A Django app to display orders from Shopify and create new orders."
authors = ["James Williams <jamesleighwilliams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "<3"
requests = "^2.24.0"
django-crispy-forms = "^1.9.2"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"
black = "^20.8b1"
pylama = "^7.7.1"
isort = "^5.4.2"
pre-commit = "^2.7.1"
mypy = "^0.782"
pytest-django = "^3.9.0"
django-debug-toolbar = "^2.2"
pytest = "^6.0.1"
django_coverage_plugin = "^1.8.0"
yamllint = "^1.24.2"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
